force-app/main/default/objects/C3C_QueueProcessingAsyncControl2__c/C3C_QueueProcessingAsyncControl2__c.object-meta.xml
<CustomObject>
    <description>Objetivo: Ter um controle assíncrono para lote de processamento da fila, para que não sejam postas em execução 2 ou mais batches  do mesmo serviço</description>
    <label>Controle Assíncrono de Processamento</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Controle Assíncrono de Processamento</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>