force-app/main/default/objects/C3C_QueueProcessingAsyncControl2__c/fields/InExecution__c.field-meta.xml
<CustomField>
    <fullName>InExecution__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Inicialmente preenchido na classe C3C_QueueProcessingBatchService, no método executeAsyncQueueProcessingBatch. Ao iniciar a execução de um lote de processamento assíncrono da fila, é setado como true</description>
    <label>Está em execução</label>
    <type>Checkbox</type>
</CustomField>