force-app/main/default/objects/C3C_QueueProcessingAsyncControl2__c/fields/InExecutionQueueProcessingBatchId__c.field-meta.xml
<CustomField>
    <fullName>InExecutionQueueProcessingBatchId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lote em execução</label>
    <referenceTo>C3C_QueueProcessingBatch__c</referenceTo>
    <relationshipLabel>Controle Assíncrono de Processamento (Lote em execução)</relationshipLabel>
    <relationshipName>Controle_Ass_ncrono_de_Processamento</relationshipName>
    <type>Lookup</type>
</CustomField>