force-app/main/default/objects/C3C_QueueProcessingAsyncControl2__c/fields/NextExecuteQueueProcessingBatchId__c.field-meta.xml
<CustomField>
    <fullName>NextExecuteQueueProcessingBatchId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Próximo lote que será executado</label>
    <referenceTo>C3C_QueueProcessingBatch__c</referenceTo>
    <relationshipLabel>Controle Assíncrono de Processamento</relationshipLabel>
    <relationshipName>C3C_QueueProcessingAsyncControl</relationshipName>
    <type>Lookup</type>
</CustomField>