force-app/main/default/objects/C3C_QueueProcessingAsyncControl2__c/fields/ServiceName__c.field-meta.xml
<CustomField>
    <fullName>ServiceName__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Nome do Serviço</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>