force-app/main/default/objects/C3C_QueueProcessingAsyncControl2__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ServiceName__c</columns>
    <columns>InExecution__c</columns>
    <columns>NextExecuteQueueProcessingBatchId__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>